{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 18,
  "lineage": "b710200c-a9c0-2610-e8f6-61edd6f8295f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025bbcfb04b076789",
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:instance/i-0d1038558339c15ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1038558339c15ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS-study",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ababf48b2d6854d4"
              }
            ],
            "primary_network_interface_id": "eni-0ababf48b2d6854d4",
            "private_dns": "ip-10-0-1-137.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_ip": "52.195.171.239",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04381d3d4bb923d88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6b63c3c57865163",
            "tags": {
              "Name": "Public-EC2a"
            },
            "tags_all": {
              "Name": "Public-EC2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d99a28664e19c969"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "i-0d1038558339c15ea",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.public_sg2",
            "aws_subnet.public_a2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:internet-gateway/igw-04c62a3846c156a0e",
            "id": "igw-04c62a3846c156a0e",
            "owner_id": "714686009682",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-study-igw2"
            },
            "tags_all": {
              "Name": "aws-study-igw2"
            },
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:route-table/rtb-07d5ff8fcb5a91697",
            "id": "rtb-07d5ff8fcb5a91697",
            "owner_id": "714686009682",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "private2-rt"
            },
            "tags_all": {
              "Name": "private2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "rtb-07d5ff8fcb5a91697",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:route-table/rtb-056b1e588fc0b3c3c",
            "id": "rtb-056b1e588fc0b3c3c",
            "owner_id": "714686009682",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c62a3846c156a0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public2-rt"
            },
            "tags_all": {
              "Name": "public2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "rtb-056b1e588fc0b3c3c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac2d2869e37cd8a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07d5ff8fcb5a91697",
            "subnet_id": "subnet-0d2f85d0a15ebddef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_a2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063eb69b2eb81c15",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-07d5ff8fcb5a91697",
            "subnet_id": "subnet-0d849c5c0aba0a089"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_c2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218764af9f59611d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-056b1e588fc0b3c3c",
            "subnet_id": "subnet-0a6b63c3c57865163"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_route_table.public2",
            "aws_subnet.public_a2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e776cc01296cdffa",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-056b1e588fc0b3c3c",
            "subnet_id": "subnet-0508093662515ca83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_route_table.public2",
            "aws_subnet.public_c2",
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:security-group/sg-0d99a28664e19c969",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d99a28664e19c969",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg2",
            "name_prefix": "",
            "owner_id": "714686009682",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg2"
            },
            "tags_all": {
              "Name": "public-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "sg-0d99a28664e19c969",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:subnet/subnet-0d2f85d0a15ebddef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f85d0a15ebddef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714686009682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-subnet-a2"
            },
            "tags_all": {
              "Name": "private-subnet-a2"
            },
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "subnet-0d2f85d0a15ebddef",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:subnet/subnet-0d849c5c0aba0a089",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d849c5c0aba0a089",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714686009682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-subnet-c2"
            },
            "tags_all": {
              "Name": "private-subnet-c2"
            },
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "subnet-0d849c5c0aba0a089",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:subnet/subnet-0a6b63c3c57865163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b63c3c57865163",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714686009682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-subnet-a2"
            },
            "tags_all": {
              "Name": "public-subnet-a2"
            },
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "subnet-0a6b63c3c57865163",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:subnet/subnet-0508093662515ca83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0508093662515ca83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714686009682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-subnet-c2"
            },
            "tags_all": {
              "Name": "public-subnet-c2"
            },
            "vpc_id": "vpc-06d58deb84fa0af2d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714686009682",
            "id": "subnet-0508093662515ca83",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.aws-study-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-study-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:714686009682:vpc/vpc-06d58deb84fa0af2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01eba8b0dc289f27a",
            "default_route_table_id": "rtb-04a5ed1d93d533fc6",
            "default_security_group_id": "sg-0ce3a2edaf571be77",
            "dhcp_options_id": "dopt-062079f899de21290",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d58deb84fa0af2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a5ed1d93d533fc6",
            "owner_id": "714686009682",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "aws-study-vpc2"
            },
            "tags_all": {
              "Name": "aws-study-vpc2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}